implemented view personas use case