@@ -5,126 +5,99 @@ import entity.Pitch;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 public class ViewPersonasInteractorTest {
 
-    @Test
-    void generatePersonasSuccessTest() {
-        // Create input data
-        Pitch pitch = new Pitch("Pitch1", "Test Pitch", "test_image.png", "This is a test pitch", Collections.singletonList("Audience 1"));
-        ViewPersonasInputData inputData = new ViewPersonasInputData(pitch);
+    class MockGptDataAccess implements ViewPersonasGptDataAccessInterface {
+        @Override
+        public String utilizeApi(String systemMessage) {
+            // Returning a mocked JSON response
+            return """
+                    {
+                        "personas": [
+                            {
+                                "name": "John Doe",
+                                "age": 30,
+                                "gender": "Male",
+                                "occupation": "Engineer",
+                                "location": "New York",
+                                "about": "John is a software engineer who loves solving complex problems."
+                            },
+                            {
+                                "name": "Jane Smith",
+                                "age": 28,
+                                "gender": "Female",
+                                "occupation": "Graphic Designer",
+                                "location": "San Francisco",
+                                "about": "Jane is a creative designer with a passion for art and visual storytelling."
+                            }
+                        ]
+                    }
+                    """;
+        }
+    }
 
-        // Create a mock GPT data access object
-        ViewPersonasGptDataAccessInterface gptAccessInterface = new ViewPersonasGptDataAccessInterface() {
-            @Override
-            public List<Persona> generatePersonas(String pitchName, String pitchDescription, List<String> targetAudience) throws Exception {
-                // Return a mock list of personas
-                List<Persona> personas = new ArrayList<>();
-                Persona persona1 = new Persona();
-                persona1.setName("Persona 1");
-                Persona persona2 = new Persona();
-                persona2.setName("Persona 2");
-                personas.add(persona1);
-                personas.add(persona2);
-                return personas;
-            }
-        };
+    class MockOutputBoundary implements ViewPersonasOutputBoundary {
+        boolean successCalled = false;
+        boolean failCalled = false;
+        ViewPersonasOutputData successData = null;
+        String errorMessage = null;
 
-        // Create a mock output boundary
-        ViewPersonasOutputBoundary outputBoundary = new ViewPersonasOutputBoundary() {
-            @Override
-            public void prepareSuccessView(ViewPersonasOutputData outputData) {
-                // Assertions to verify the output data
-                assertNotNull(outputData);
-                assertEquals(2, outputData.getPersonas().size());
-                assertEquals("Persona 1", outputData.getPersonas().get(0).getName());
-                assertEquals("Persona 2", outputData.getPersonas().get(1).getName());
-            }
+        @Override
+        public void prepareSuccessView(ViewPersonasOutputData outputData) {
+            successCalled = true;
+            successData = outputData;
+        }
 
-            @Override
-            public void prepareFailView(String errorMessage) {
-                fail("Failure view should not be called in a success scenario.");
-            }
-        };
-
-        // Create the interactor
-        ViewPersonasInteractor interactor = new ViewPersonasInteractor(gptAccessInterface, outputBoundary);
-
-        // Execute the use case
-        interactor.execute(inputData);
+        @Override
+        public void prepareFailView(String error) {
+            failCalled = true;
+            errorMessage = error;
+        }
     }
 
     @Test
-    void generatePersonasNoResultTest() {
-        // Create input data
-        Pitch pitch = new Pitch("Pitch1", "Test Pitch", "test_image.png", "This is a test pitch", Collections.singletonList("Audience 1"));
-        ViewPersonasInputData inputData = new ViewPersonasInputData(pitch);
+    public void testExecute_success() {
+        // Arrange
+        Pitch pitch = new Pitch("1", "Test Pitch", "sample.jpg", "Test description", List.of("Young Adults", "Tech Enthusiasts"));
+        MockGptDataAccess mockGptDataAccess = new MockGptDataAccess();
+        MockOutputBoundary mockOutputBoundary = new MockOutputBoundary();
+        ViewPersonasInteractor interactor = new ViewPersonasInteractor(mockGptDataAccess, mockOutputBoundary);
 
-        // Create a mock GPT data access object that returns an empty list
-        ViewPersonasGptDataAccessInterface gptAccessInterface = new ViewPersonasGptDataAccessInterface() {
-            @Override
-            public List<Persona> generatePersonas(String pitchName, String pitchDescription, List<String> targetAudience) throws Exception {
-                return new ArrayList<>(); // No personas generated
-            }
-        };
+        // Act
+        interactor.execute(new ViewPersonasInputData(pitch));
 
-        // Create a mock output boundary
-        ViewPersonasOutputBoundary outputBoundary = new ViewPersonasOutputBoundary() {
-            @Override
-            public void prepareSuccessView(ViewPersonasOutputData outputData) {
-                fail("Success view should not be called when no personas are generated.");
-            }
-
-            @Override
-            public void prepareFailView(String errorMessage) {
-                // Assertions to verify the error message
-                assertEquals("No personas generated.", errorMessage);
-            }
-        };
-
-        // Create the interactor
-        ViewPersonasInteractor interactor = new ViewPersonasInteractor(gptAccessInterface, outputBoundary);
-
-        // Execute the use case
-        interactor.execute(inputData);
+        // Assert
+        assertTrue(mockOutputBoundary.successCalled);
+        assertNotNull(mockOutputBoundary.successData);
+        List<Persona> personas = mockOutputBoundary.successData.getPersonas();
+        assertEquals(2, personas.size());
+        assertEquals("John Doe", personas.get(0).getName());
+        assertEquals("Jane Smith", personas.get(1).getName());
     }
 
     @Test
-    void generatePersonasApiExceptionTest() {
-        // Create input data
-        Pitch pitch = new Pitch("Pitch1", "Test Pitch", "test_image.png", "This is a test pitch", Collections.singletonList("Audience 1"));
-        ViewPersonasInputData inputData = new ViewPersonasInputData(pitch);
-
-        // Create a mock GPT data access object that throws an exception
-        ViewPersonasGptDataAccessInterface gptAccessInterface = new ViewPersonasGptDataAccessInterface() {
+    public void testExecute_failure() {
+        // Arrange
+        Pitch pitch = new Pitch("1", "Test Pitch", "sample.jpg", "Test description", List.of("Young Adults", "Tech Enthusiasts"));
+        ViewPersonasGptDataAccessInterface failingGptDataAccess = new ViewPersonasGptDataAccessInterface() {
             @Override
-            public List<Persona> generatePersonas(String pitchName, String pitchDescription, List<String> targetAudience) throws Exception {
-                throw new Exception("API error");
+            public String utilizeApi(String systemMessage) {
+                throw new RuntimeException("Mock API Failure");
             }
         };
+        MockOutputBoundary mockOutputBoundary = new MockOutputBoundary();
+        ViewPersonasInteractor interactor = new ViewPersonasInteractor(failingGptDataAccess, mockOutputBoundary);
 
-        // Create a mock output boundary
-        ViewPersonasOutputBoundary outputBoundary = new ViewPersonasOutputBoundary() {
-            @Override
-            public void prepareSuccessView(ViewPersonasOutputData outputData) {
-                fail("Success view should not be called when an exception occurs.");
-            }
+        // Act
+        interactor.execute(new ViewPersonasInputData(pitch));
 
-            @Override
-            public void prepareFailView(String errorMessage) {
-                // Assertions to verify the error message
-                assertEquals("An error occurred while generating personas.", errorMessage);
-            }
-        };
-
-        // Create the interactor
-        ViewPersonasInteractor interactor = new ViewPersonasInteractor(gptAccessInterface, outputBoundary);
-
-        // Execute the use case
-        interactor.execute(inputData);
+        // Assert
+        assertTrue(mockOutputBoundary.failCalled);
+        assertNotNull(mockOutputBoundary.errorMessage);
+        assertTrue(mockOutputBoundary.errorMessage.contains("An error occurred"));
     }
 }
